--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/logo.png" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/timeline.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
@@ -26,43 +27,52 @@
                 </div>
             </div>
         </nav>
+        <div class = "aboutme-heading text-center">About me</div>
         <div class="timeline-container">
             <div class="timeline">
               <ul>
                 <li>
                   <div class="timeline-content">
-                    <h3 class="date">20th may, 2010</h3>
-                    <h1>Heading 1</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                    <h3 class="date">Sep,2019 - Aug, 2021</h3>
+                    <h1>University of California, Irvine</h1>
+                    <h2>Bachelor of Science in Computer Science.</h2>
+                    <p> GPA: 3.647</p>
                   </div>
                 </li>
                 <li>
-                  <div class="timeline-content">
-                    <h3 class="date">20th may, 2010</h3>
-                    <h1>Heading 2</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
-                  </div>
+                    <div class="timeline-content">
+                      <h3 class="date">Dec,2019 - Aug, 2021</h3>
+                      <h1>Creative Director</h1>
+                      <h2>Hong Kong Student Union @ UCI</h2>
+                      <p>• Help organizing events.</p>
+                      <p>• Create poster using <b>Adobe Illustrator</b> and <b>Photoshop</b> .</p>
+                      <p>• Using <b>Google Sheet</b> and <b>Google Docs</b> to present events.</p>
+                    </div>
                 </li>
                 <li>
-                  <div class="timeline-content">
-                    <h3 class="date">20th may, 2010</h3>
-                    <h1>Heading 3</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
-                  </div>
+                    <div class="timeline-content">
+                      <h3 class="date">Sep,2016 - May, 2019</h3>
+                      <h1>Fullerton College</h1>
+                      <h2>Transfer Student, Major in Computer Science</h2>
+                      <p>GPA: 4.0</p>
+                    </div>
                 </li>
                 <li>
-                  <div class="timeline-content">
-                    <h3 class="date">20th may, 2010</h3>
-                    <h1>Heading 4</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
-                  </div>
+                    <div class="timeline-content">
+                      <h3 class="date">Aug,2018 - May, 2019</h3>
+                      <h1>Officer</h1>
+                      <h2>EOPS Honor Alliance @ Fullerton College</h2>
+                      <p>• Help organizing events.</p>
+                      <p>• Help students who need transfer guidance .</p>
+                    </div>
                 </li>
               </ul>
             </div>
-          </div>
+        </div>
+
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Cyrus Lo</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Created by Cyrus Lo 💻</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
