--- a/aboutme.html
+++ b/aboutme.html
@@ -69,6 +69,18 @@
               </ul>
             </div>
         </div>
+        <div class = "aboutme-heading text-center">Skills</div>
+        <div class="skills">
+            <div class="skills-content text-center">
+                <p class="text">C/C++</p>
+                <p class="text">Python</p>
+                <p class="text">Java</p>
+                <p class="text">MySQL</p>
+                <p class="text">Javascript</p>
+                <p class="text">HTML/CSS</p>
+            </div>
+            
+        </div>
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
