updated contact page

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" href="#!">About Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -73,15 +73,29 @@
         <div class="skills">
             <div class="skills-content text-center">
                 <p class="text">C/C++</p>
-                <p class="text">Python</p>
+                <p class="text">Python3</p>
                 <p class="text">Java</p>
                 <p class="text">MySQL</p>
                 <p class="text">Javascript</p>
                 <p class="text">HTML/CSS</p>
+                <p class="text">AWS</p>
+                <p class="text">Tomcat9</p>
+                <p class="text">Bootstrap</p>
+                <p class="text">Illustrator</p>
+                <p class="text">Photoshop</p>
+                <p class="text">Meshlab</p>
+                <p class="text">Lisp</p>
+                <p class="text">Prolog</p>
+                <p class="text">Unity</p>
             </div>
-            
         </div>
-
+        <div class = "bk-bg text-center">
+            <div class="button2" onclick="resume()"><span></span>
+                <span></span>
+                <span></span>
+                <span></span>RESUME
+            </div>
+        </div>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Created by Cyrus Lo 💻</p></div>
