--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">Cyrus Lo</a>
+                <a class="navbar-brand" href="https://cyruslo.co">Cyrus Lo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -67,6 +67,125 @@
                     </div>
                 </li>
               </ul>
+            </div>
+        </div>
+        <div class = "aboutme-heading text-center">Courses Taken</div>
+        <div class="courses">
+                <div class = "courses-content container w-60">
+                    <div class = "row row-cols-md-auto">
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 122A: Introduction to Data Management</p>
+                                <p class="description text-center">Introduction to the design of databases and the use of database management systems (DBMS) for applications. Topics include entity-relationship modeling for design, relational data model, relational algebra, relational design theory, and Structured Query Language (SQL) programming.</p>
+                                <p class="grade text-center">Grade: B-</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 122B: Project in Databases and Web Applications</p>
+                                <p class="description text-center">Introduces students to advanced database technologies and Web applications. Topics include database connectivity (ODBC/JDBC), extending databases using stored procedures, database administration, Web servers, Web programming languages (Java servlets, XML, Ajax, and mobile platforms).</p>
+                                <p class="grade text-center">In Progress</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 112: Computer Graphics</p>
+                                <p class="description text-center">Introduction to the fundamental principles of 3D computer graphics including polygonal modeling, geometric transformations, visibility algorithms, illumination models, texturing, and rasterization. Use of an independently-learned 3D graphics API to implement these techniques.</p>
+                                <p class="grade text-center">Grade: A-</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 117: Project in Computer Vision</p>
+                                <p class="description text-center">Students undertake construction of a computer vision system. Topics include automatically building 3D models from photographs, searching photo collections, robot navigation, and human motion tracking.</p>
+                                <p class="grade text-center">In Progress</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 121: Information Retrieva</p>
+                                <p class="description text-center">An introduction to information retrieval including indexing, retrieval, classifying, and clustering text and multimedia documents.</p>
+                                <p class="grade text-center">Grade: A</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 132: Computer Networks</p>
+                                <p class="description text-center">Computer network architectures, protocols, and applications. Internet congestion control, addressing, and routing. Local area networks. Multimedia networking.</p>
+                                <p class="grade text-center">Grade: A-</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 141: Concepts in Programming Languages I</p>
+                                <p class="description text-center">In-depth study of several contemporary programming languages stressing variety in data structures, operations, notation, and control. Examination of different programming paradigms, such as logic programming, functional programming and object-oriented programming; implementation strategies, programming environments, and programming style.</p>
+                                <p class="grade text-center">Grade: A+</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 143A: Principles of Operating Systems</p>
+                                <p class="description text-center">Principles and concepts of process and resource management, especially as seen in operating systems. Processes, memory management, protection, scheduling, file systems, and I/O systems are covered. Concepts illustrated in the context of several well-known systems.</p>
+                                <p class="grade text-center">In Progress</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 161: Design and Analysis of Algorithms</p>
+                                <p class="description text-center">Techniques for efficient algorithm design, including divide-and-conquer and dynamic programming, and time/space analysis. Fast algorithms for problems applicable to networks, computer games, and scientific computing, such as sorting, shortest paths, minimum spanning trees, network flow, and pattern matching.</p>
+                                <p class="grade text-center">In Progress</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 171: Introduction to Artificial Intelligence</p>
+                                <p class="description text-center">Different means of representing knowledge and uses of representations in heuristic problem solving. Representations considered include predicate logic, semantic nets, procedural representations, natural language grammars, and search trees.</p>
+                                <p class="grade text-center">In Progress</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">COMPSCI 178. Machine Learning and Data-Mining</p>
+                                <p class="description text-center">Introduction to principles of machine learning and data-mining applied to real-world datasets. Typical applications include spam filtering, object recognition, and credit scoring.</p>
+                                <p class="grade text-center">In Progress</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">I&C SCI 161: Game Engine Lab</p>
+                                <p class="description text-center">The use of an open source game or graphics engine in the design and implementation of a computer game. Principles of game engine design. Students work on teams to design, implement, and evaluate new computer games based on an engine.</p>
+                                <p class="grade text-center">Grade: A</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">I&C SCI 51. Introductory Computer Organization</p>
+                                <p class="description text-center">Multilevel view of system hardware and software. Operation and interconnection of hardware elements. Instruction sets and addressing modes. Virtual memory and operating systems. Laboratory work using low-level programming languages.</p>
+                                <p class="grade text-center">Grade: B+</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">I&C SCI 53: Principles in System Design</p>
+                                <p class="description text-center">Introduces basic principles of system software: operating systems, compilers, and networking. Exposure to the following topics through theoretical and practical programming experiences: linking and loading, process and memory management, concurrency and synchronization, network communication, programming for performance, etc.</p>
+                                <p class="grade text-center">Grade: A</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">I&C SCI 45C. Programming in C/C++ as a Second Language</p>
+                                <p class="description text-center">An introduction to the lexical, syntactic, semantic, and pragmatic characteristics of the C/C++ languages for experienced programmers. Emphasis on object-oriented programming, using standard libraries, and programming with manual garbage collection.</p>
+                                <p class="grade text-center">Grade: B+</p>
+                            </div>
+                        </div>
+                        <div class = "col-12">
+                            <div class="course">
+                                <p class="title text-center">I&C SCI 46: Data Structure Implementation and Analysis</p>
+                                <p class="description text-center">Focuses on implementation and mathematical analysis of fundamental data structures and algorithms. Covers storage allocation and memory management techniques.</p>
+                                <p class="grade text-center">Grade: A</p>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
         <div class = "aboutme-heading text-center">Skills</div>
