--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
             <div class="project-content">
                 <!-- card -->
                 <a href="https://cyruslo5028.github.io/waroftank" style="text-decoration:none;">
-                <div class="project-card" >
+                <div class="project-card row" >
                     
-                        <div class="project-icon"><i class="material-icons md-36"></i></div>
-                        <p class="project-title">War of Tank</p>
-                        <p class="project-text">A mini shooting game coded in <b>Unity</b> and <b>C#</b></p>
+                        <div class="project-icon col-12"><i class="material-icons md-36"></i></div>
+                        <p class="project-title col-12">War of Tank</p>
+                        <p class="project-text col-12">A mini shooting game coded in <b>Unity</b> and <b>C#</b></p>
+                        <div class= "project-tags">
+                            <div class="project-tag text-center">C#</div>
+                            <div class="project-tag text-center">Unity</div>
+                        </div>
                 </div>
                 </a>
                 <!-- end card -->
@@ -72,6 +76,11 @@
                             <div class="project-icon"><i class="material-icons md-36"></i></div>
                             <p class="project-title">WebGL Shading</p>
                             <p class="project-text">A Project from CS112, where I use different <b>reflectance model</b> to render the object. </p>
+                            <div class= "project-tags">
+                                <div class="project-tag text-center">Javascript</div>
+                                <div class="project-tag text-center">HTML</div>
+                                <div class="project-tag text-center">Ray Tracing</div>
+                            </div>
                     </div>
                 </a>
                 <!-- end card -->
@@ -82,6 +91,10 @@
                             <div class="project-icon"><i class="material-icons md-36"></i></div>
                             <p class="project-title">Clubhouse <br> Music BOT</p>
                             <p class="project-text">A music bot written in <b>Python</b> using the <b>unofficial clubhouse API</b> and <b>spotify API</b>.</p>
+                            <div class= "project-tags">
+                                <div class="project-tag text-center">Python3</div>
+                                <div class="project-tag text-center">API</div>
+                            </div>
                     </div>
                 </a>
                 <!-- end card -->
