--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
         <link rel="icon" type="image/x-icon" href="assets/logo.png" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/contact.css" rel="stylesheet" />
+        <link href="css/timeline.css" rel="stylesheet"/>
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
@@ -36,6 +37,23 @@
             </div>
         </header>
         <div class = "contact-heading text-center">Contact Me</div>
+        <div class ="container w-75 ">
+            <form id="contact_form" method="post" class = "d-flex flex-column justify-content-center ">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Email address</label>
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Message</label>
+                    <textarea class="form-control" id="message" rows="3"></textarea>
+                </div>
+                <div class="button2 w-lg-15 w-25" onclick="sendEmail()">
+                    <span></span>
+                    <span></span>
+                    <span></span>SEND</div>
+
+            </form>
+        </div>
         <div class="sns-body">
             <div class="sns-ul">
                 <li>
@@ -70,6 +88,11 @@
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+        <!--SMTP JS-->
+        <script src="https://smtpjs.com/v3/smtp.js"></script> 
+        <!--jQuery-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
