--- a/aboutme.html
+++ b/aboutme.html
@@ -84,7 +84,7 @@
                             <div class="course">
                                 <p class="title text-center">COMPSCI 122B: Project in Databases and Web Applications</p>
                                 <p class="description text-center">Introduces students to advanced database technologies and Web applications. Topics include database connectivity (ODBC/JDBC), extending databases using stored procedures, database administration, Web servers, Web programming languages (Java servlets, XML, Ajax, and mobile platforms).</p>
-                                <p class="grade text-center">In Progress</p>
+                                <p class="grade text-center">Grade: B+</p>
                             </div>
                         </div>
                         <div class = "col-12">
@@ -98,7 +98,7 @@
                             <div class="course">
                                 <p class="title text-center">COMPSCI 117: Project in Computer Vision</p>
                                 <p class="description text-center">Students undertake construction of a computer vision system. Topics include automatically building 3D models from photographs, searching photo collections, robot navigation, and human motion tracking.</p>
-                                <p class="grade text-center">In Progress</p>
+                                <p class="grade text-center">Grade: A</p>
                             </div>
                         </div>
                         <div class = "col-12">
@@ -140,14 +140,14 @@
                             <div class="course">
                                 <p class="title text-center">COMPSCI 171: Introduction to Artificial Intelligence</p>
                                 <p class="description text-center">Different means of representing knowledge and uses of representations in heuristic problem solving. Representations considered include predicate logic, semantic nets, procedural representations, natural language grammars, and search trees.</p>
-                                <p class="grade text-center">In Progress</p>
+                                <p class="grade text-center">Grade: A-</p>
                             </div>
                         </div>
                         <div class = "col-12">
                             <div class="course">
                                 <p class="title text-center">COMPSCI 178. Machine Learning and Data-Mining</p>
                                 <p class="description text-center">Introduction to principles of machine learning and data-mining applied to real-world datasets. Typical applications include spam filtering, object recognition, and credit scoring.</p>
-                                <p class="grade text-center">In Progress</p>
+                                <p class="grade text-center">Grade: A</p>
                             </div>
                         </div>
                         <div class = "col-12">
