--- a/aboutme.html
+++ b/aboutme.html
@@ -32,11 +32,19 @@
             <div class="timeline">
               <ul>
                 <li>
+                    <div class="timeline-content">
+                      <h3 class="date">Jul,2021 - Present</h3>
+                      <h1>Software Development Engineer Intern</h1>
+                      <h2>Animal Fellowship LLC</h2>
+                      <p>• Software development using  <b>React</b> and <b>React Native</b></p>
+                    </div>
+                  </li>
+                <li>
                   <div class="timeline-content">
                     <h3 class="date">Sep,2019 - Aug, 2021</h3>
                     <h1>University of California, Irvine</h1>
                     <h2>Bachelor of Science in Computer Science.</h2>
-                    <p> GPA: 3.647</p>
+                    <p> GPA: 3.628</p>
                   </div>
                 </li>
                 <li>
@@ -126,14 +134,14 @@
                             <div class="course">
                                 <p class="title text-center">COMPSCI 143A: Principles of Operating Systems</p>
                                 <p class="description text-center">Principles and concepts of process and resource management, especially as seen in operating systems. Processes, memory management, protection, scheduling, file systems, and I/O systems are covered. Concepts illustrated in the context of several well-known systems.</p>
-                                <p class="grade text-center">In Progress</p>
+                                <p class="grade text-center">Grade: B+</p>
                             </div>
                         </div>
                         <div class = "col-12">
                             <div class="course">
                                 <p class="title text-center">COMPSCI 161: Design and Analysis of Algorithms</p>
                                 <p class="description text-center">Techniques for efficient algorithm design, including divide-and-conquer and dynamic programming, and time/space analysis. Fast algorithms for problems applicable to networks, computer games, and scientific computing, such as sorting, shortest paths, minimum spanning trees, network flow, and pattern matching.</p>
-                                <p class="grade text-center">In Progress</p>
+                                <p class="grade text-center">Grade: A+</p>
                             </div>
                         </div>
                         <div class = "col-12">
