--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="col-lg-6">
                         <h2>Greeting! I'm Cyrus.</h2>
                         <p class="lead">A HongKonger who currently living in California.</p>
-                        <p class="mb-0">I'm a Computer Science student in University of California, Irvine. I love coding software that can help people to solve real world problem. Also, I like playing and coding games. Hit me up if you want to cooperate.</p>
+                        <p class="mb-0">Currently working as a Software Development Engineer Intern in a startup. I am from University of California, Irvine major in Computer Science specialize in informaion. I love creating program that can help people solve daily problem. Hit me up if you want to coorperate.</p>
                     </div>
                 </div>
             </div>
