--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <h2>Greeting! I'm Cyrus.</h2>
-                        <p class="lead">A HongKonger who currently living in California.</p>
-                        <p class="mb-0">Currently working as a Software Development Engineer Intern in a startup. I am from University of California, Irvine major in Computer Science specialize in informaion. I love creating program that can help people solve daily problem. Hit me up if you want to coorperate.</p>
-                    </div>
+                        <p class="lead">A HongKonger who is currently living in California.</p>
+                        <p class="mb-0">Currently working as a Software Development Engineer Intern in a startup. I graduated from University of California, Irvine as a Computer Science major specializing in information. My passion is creating programs that help people solve daily problems. Hit me up if you want to coorperate.</p>
+                     </div>
                 </div>
             </div>
         </section>
