--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
                     <div class="timeline-content">
                       <h3 class="date">Jul,2021 - Present</h3>
                       <h1>Software Development Engineer Intern</h1>
-                      <h2>Animal Fellowship LLC</h2>
+                      <h2>ArcLight Software LLC</h2>
                       <p>• Software development using  <b>React</b> and <b>React Native</b></p>
                     </div>
                   </li>
