--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
                 </a>
                 <!-- end card -->
                 <!-- card -->
-                <a href="https://cyruslo.co/VenmoSplit" style="text-decoration:none;">
+                <a href="https://animalsplit.com/" style="text-decoration:none;">
                     <div class="project-card" >
                         
                             
-                            <p class="project-title">Venmo Split</p>
-                            <p class="project-text">A tools to calculate the amount that each person need to pay for a bill.</p>
+                            <p class="project-title">Animal Split</p>
+                            <p class="project-text">Bill splitting tools.</p>
                             <div class= "project-tags">
-                                <div class="project-tag text-center">jQuery</div>
+                                <div class="project-tag text-center">React.js</div>
                                 <div class="project-tag text-center">Javascript</div>
-                                <div class="project-tag text-center">Bootstrap</div>
+                                <div class="project-tag text-center">MongoDB</div>
                             </div>
                     </div>
                 </a>
