updated current job

--- a/aboutme.html
+++ b/aboutme.html
@@ -33,12 +33,25 @@
               <ul>
                 <li>
                     <div class="timeline-content">
-                      <h3 class="date">Jul,2021 - Present</h3>
-                      <h1>Software Development Engineer Intern</h1>
+                      <h3 class="date">Feb,2022 - Present</h3>
+                      <h1>Site Reliability Engineer</h1>
+                      <h2>Tiktok Inc</h2>
+                      <p>• Maintain reliability of all microserice</p>
+                      <p>• Coding in <b>Golang</b> daily</p>
+                      <p>• Handling deployment for all microservice</p>
+                      <p>• Use tools like <b>Grafana</b> to monitor the system in order to maintain SLA</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-content">
+                      <h3 class="date">Jul,2021 - Dec, 2021</h3>
+                      <h1>Software Development Engineer</h1>
                       <h2>ArcLight Software LLC</h2>
                       <p>• Software development using  <b>React</b> and <b>React Native</b></p>
+                      <p>• Establish back-end service using <b>AWS EC2/S3</b></p>
+                      <p>• Maintain <b>MongoDB</b> database service</p>
                     </div>
-                  </li>
+                </li>
                 <li>
                   <div class="timeline-content">
                     <h3 class="date">Sep,2019 - Aug, 2021</h3>
@@ -216,6 +229,13 @@
                 <p class="text">Unity</p>
                 <p class="text">React</p>
                 <p class="text">React Native</p>
+                <p class="text">Grafana</p>
+                <p class="text">Hive</p>
+                <p class="text">Golang</p>
+                <p class="text">DevOps</p>
+                <p class="text">Jenkins</p>
+                <p class="text">FaaS</p>
+                <p class="text">HTTP/GRPC</p>
 
             </div>
         </div>
