--- a/aboutme.html
+++ b/aboutme.html
@@ -31,11 +31,22 @@
         <div class="timeline-container">
             <div class="timeline">
               <ul>
+              <li>
+                    <div class="timeline-content">
+                      <h3 class="date">Nov,2022 - Present</h3>
+                      <h1>Tech Lead, Global Payment</h1>
+                      <h2>Tiktok USDS Inc</h2>
+                      <p>• Lead a team of 12 engineers</p>
+                      <p>• Maintain the stability of the payment system</p>
+                      <p>• Make sure the system is PCI compliances</p>
+                      <p>• Avoid data lead to non US employee</p>
+                    </div>
+                </li>
                 <li>
                     <div class="timeline-content">
-                      <h3 class="date">Feb,2022 - Present</h3>
+                      <h3 class="date">Feb,2022 - Nov,2022</h3>
                       <h1>Site Reliability Engineer</h1>
-                      <h2>Tiktok Inc</h2>
+                      <h2>Tiktok USDS Inc</h2>
                       <p>• Maintain reliability of all microserice</p>
                       <p>• Coding in <b>Golang</b> daily</p>
                       <p>• Handling deployment for all microservice</p>
