--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <h2>Greeting! I'm Cyrus.</h2>
-                        <p class="lead">A HongKonger who is currently living in California.</p>
-                        <p class="mb-0">Currently working as a Site Reliability Engineer in a social media company. I graduated from University of California, Irvine as a Computer Science major specializing in information. My passion is creating programs that help people solve daily problems. Hit me up if you want to coorperate.</p>
+                        <p class="lead">A HongKonger who is currently living in Los Angeles</p>
+                        <p class="mb-0">Currently working as a Tech Lead in Tiktok Inc. I graduated from University of California, Irvine as a Computer Science major specializing in information. I like to play golf in my leisure time. Feel free to hit me if you want a referal to Tiktok!</p>
                      </div>
                 </div>
             </div>
