--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="col-lg-6">
                         <h2>Greeting! I'm Cyrus.</h2>
                         <p class="lead">A HongKonger who is currently living in Los Angeles</p>
-                        <p class="mb-0">Currently working as a Tech Lead in Tiktok Inc. I graduated from University of California, Irvine as a Computer Science major specializing in information. I like to play golf in my leisure time. Feel free to hit me up if you want a referal to Tiktok!</p>
+                        <p class="mb-0">Hello! I'm Cyrus, a Senior Software Engineer, Tech Lead based in Los Angeles. With a Computer Science B.S. degree, I bring years of experience in payment industry in tech. Beyond my professional life, I'm passionate about golf and cars.</p>
                      </div>
                 </div>
             </div>
